--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
             <H1>Cabeçalho</H1>
         </div>
     </section>
+    
+    <section>
+        <div>
+            <h1>Body</h1>
+        </div>
+    </section>
 </body>
 </html>
