--- a/index.html
+++ b/index.html
@@ -11,11 +11,32 @@
             <H1>Cabeçalho</H1>
         </div>
     </section>
-    
+
     <section>
         <div>
             <h1>Body</h1>
         </div>
     </section>
+
+    <section>
+        <div>
+            <form action="">
+                <input type="checkbox" name="" id="">
+                <input type="email" name="" id="">
+                <input type="password" name="" id="">
+            </form>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <h1>rodapé massa</h1>
+            <input type="text">
+            <select name="" id="">
+                <option value="">muito massa mesmo</option>
+            </select>
+        </div>
+    </section>
+    
 </body>
 </html>
