--- a/index.html
+++ b/index.html
@@ -19,24 +19,22 @@
     </section>
 
     <section>
-        <div>
-            <form action="">
-                <input type="checkbox" name="" id="">
-                <input type="email" name="" id="">
-                <input type="password" name="" id="">
-            </form>
-        </div>
+        <form action="">
+            <label for=""></label>
+            <input type="text">
+        </form>
     </section>
 
     <section>
         <div>
             <h1>rodapé massa</h1>
+            <label for=""></label>
             <input type="text">
             <select name="" id="">
                 <option value="">muito massa mesmo</option>
             </select>
         </div>
     </section>
-    
+
 </body>
 </html>
